# MTG-Decks

./: .env.example  .gitignore  FUNCTIONAL_SPEC.md  README.md  TEST_STRATEGY.md  decks.html  index.html  inventory.html  inventory.md  pyproject.toml  pytest-results.md  valuation-report.md
.github/: CODEOWNERS
.github/workflows/: pages.yml
decks/: kudo-bears.md  tidus-yunas-guardian.md  ur-dragon.md
scripts/: refresh_html_hashes.py
site/: .nojekyll  functional-spec.html  inventory.html  upload.html
src/mtg_decks/: __init__.py  cli.py  config.py  deck.py  importer.py  inventory.py  library.py  rules.py  site_checks.py  spec_sync.py  valuation.py
tests/: __init__.py  _pytest_results.py  conftest.py  test_cli.py  test_deck.py  test_html_baseline.py  test_importer.py  test_inventory.py  test_library.py  test_pytest_results_report.py  test_refresh_html_hashes.py  test_rules.py  test_site_checks.py  test_spec_sync.py  test_valuation.py
