[project]
name = "mtg-decks"
version = "0.1.0"
description = "Simple CLI to store and review Commander decks as Markdown files"
authors = [{ name = "MTG Deck Librarian" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mtg-decks = "mtg_decks.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
